# SnakeGame

./: CMakeLists.txt  LICENSE  README.md
inc/: Constants.hpp  Food.hpp  Game.hpp  LoadRessource.hpp  Snake.hpp  TextManager.hpp
inc/AI/: BruteForce.hpp
inc/Core/: Game.hpp
inc/Entity/: Food.hpp  Snake.hpp
inc/Utils/: Constants.hpp  TextManager.hpp
src/: Food.cpp  Game.cpp  Snake.cpp  TextManager.cpp
src/AI/: BruteForce.cpp
src/Core/: Game.cpp  main.cpp
src/Entity/: Food.cpp  Snake.cpp
src/Utils/: TextManager.cpp
